# ITK-TubularGeodesics

./: README.md
paper/: Makefile  TubularGeodesicITK.bib  TubularGeodesicITK.tex  example_code.cxx  listcode.tex
paper/figures/: Diagram.eps  Diagram.fig  RegistrationComponentsDiagram.fig
src/: CMakeLists.txt  DartConfiguration.tcl  DeleteCMakeGeneratedFiles.sh  PathCompare.cxx  README.txt  itkMultiScaleOrientedFluxBasedMeasureImageFilter.cxx  itkMultiScaleOrientedFluxBasedMeasureImageFilter.h  itkMultiScaleOrientedFluxBasedMeasureImageFilter.hxx  itkMultiScaleTubularityMeasureImageFilter.cxx  itkMultiScaleTubularityMeasureImageFilter.h  itkMultiScaleTubularityMeasureImageFilter.hxx  itkOrientedFluxCrossSectionTraceMeasure.h  itkOrientedFluxCrossSectionTraceMeasure.hxx  itkOrientedFluxMatrixImageFilter.h  itkOrientedFluxMatrixImageFilter.hxx  itkPolyLineParametricTubularPath.h  itkPolyLineParametricTubularPath.hxx  itkRK4CharacteristicDirectionsToPathFilter.h  itkRK4CharacteristicDirectionsToPathFilter.hxx  itkTubularMetricToPathFilter.cxx  itkTubularMetricToPathFilter.h  itkTubularMetricToPathFilter.hxx
src/data/: OP_1.tif  OP_1_01.swc  OP_1_02.swc  OP_1_03.swc  OP_1_04.swc  Real-DSA-01_01.swc  Real-DSA-01_02.swc  Real-DSA-01_03.swc  Synthetic-02.swc
